--- a/index.html
+++ b/index.html
@@ -1,1 +1,194 @@
-<!-- Add your complete HTML valentine interactive page with styling and JavaScript content here -->
+<!doctype html>
+<html lang="ru">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Будешь моей валентинкой?</title>
+  <style>
+    :root {
+      --bg1: #ffb6c1;
+      --bg2: #ffd1dc;
+      --card: rgba(255,255,255,.75);
+      --shadow: 0 18px 50px rgba(0,0,0,.15);
+    }
+    body {
+      margin: 0;
+      min-height: 100vh;
+      display: grid;
+      place-items: center;
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;
+      background: radial-gradient(circle at top, var(--bg2), var(--bg1));
+      overflow: hidden;
+    }
+    .card{
+      width: min(520px, 92vw);
+      background: var(--card);
+      backdrop-filter: blur(10px);
+      box-shadow: var(--shadow);
+      border-radius: 24px;
+      padding: 28px 22px;
+      text-align: center;
+      position: relative;
+    }
+    h1{
+      margin: 0 0 14px;
+      font-size: clamp(24px, 4vw, 34px);
+    }
+    p{
+      margin: 0 0 20px;
+      opacity: .85;
+    }
+
+    .arena{
+      position: relative;
+      height: 160px;
+      border-radius: 18px;
+      background: rgba(255,255,255,.45);
+      border: 1px solid rgba(255,255,255,.7);
+      overflow: hidden;
+    }
+    .btn{
+      border: 0;
+      padding: 14px 18px;
+      border-radius: 999px;
+      font-size: 18px;
+      cursor: pointer;
+      box-shadow: 0 10px 22px rgba(0,0,0,.12);
+      transition: transform .08s ease;
+      user-select: none;
+      -webkit-tap-highlight-color: transparent;
+    }
+    .btn:active { transform: scale(.98); }
+
+    #yes{
+      background: #ff2f6d;
+      color: white;
+      position: absolute;
+      left: 18%;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+    #no{
+      background: white;
+      color: #ff2f6d;
+      position: absolute;
+      left: 60%;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+
+    .result{
+      display: none;
+      margin-top: 18px;
+    }
+    .result.show{ display:block; }
+
+    .gif{
+      width: min(320px, 80vw);
+      border-radius: 18px;
+      box-shadow: var(--shadow);
+      margin: 10px auto 0;
+      display:block;
+    }
+    
+    .heart{
+      position: absolute;
+      font-size: 18px;
+      opacity: .7;
+      animation: floatUp 3.5s linear forwards;
+      pointer-events: none;
+    }
+    @keyframes floatUp{
+      from{ transform: translateY(0) scale(1); opacity: .8; }
+      to{ transform: translateY(-140px) scale(1.4); opacity: 0; }
+    }
+  </style>
+</head>
+<body>
+  <div class="card">
+    <h1>Будешь моей валентинкой? 💘</h1>
+    <p>приглашаю вас стать моей валентинкой на 2026</p>
+
+    <div class="arena" id="arena">
+      <button class="btn" id="yes">Да</button>
+      <button class="btn" id="no">Нет</button>
+    </div>
+
+    <div class="result" id="result">
+      <h2>Ураааа!! </h2>
+      <p>Официально валентинки</p>
+
+    
+      <img class="gif" id="gif" alt="cute gif"
+        src="https://raw.githubusercontent.com/seyauldaseva-cell/valentine/main/heart.jpg" />
+
+   
+    </div>
+  </div>
+
+  <script>
+    const arena = document.getElementById('arena');
+    const noBtn = document.getElementById('no');
+    const yesBtn = document.getElementById('yes');
+    const result = document.getElementById('result');
+
+   
+    const dodge = () => {
+      const pad = 12;
+
+      const arenaRect = arena.getBoundingClientRect();
+      const btnRect = noBtn.getBoundingClientRect();
+
+      const maxX = arenaRect.width - btnRect.width - pad;
+      const maxY = arenaRect.height - btnRect.height - pad;
+
+      const x = Math.max(pad, Math.random() * maxX);
+      const y = Math.max(pad, Math.random() * maxY);
+
+      noBtn.style.left = x + "px";
+      noBtn.style.top  = y + "px";
+
+      spawnHeart(arenaRect.width, arenaRect.height);
+    };
+
+    noBtn.addEventListener('mouseenter', dodge);
+    noBtn.addEventListener('touchstart', (e) => {
+      e.preventDefault(); // чтобы не "нажалось"
+      dodge();
+    }, { passive: false });
+
+    yesBtn.addEventListener('click', () => {
+      result.classList.add('show');
+      confettiHearts();
+      arena.style.display = "none";
+    });
+
+
+    function spawnHeart(w, h){
+      const heart = document.createElement('div');
+      heart.className = 'heart';
+      heart.textContent = Math.random() > 0.5 ? '💗' : '💞';
+      heart.style.left = (Math.random() * (w - 20)) + "px";
+      heart.style.top = (h - 30) + "px";
+      heart.style.fontSize = (14 + Math.random()*18) + "px";
+      arena.appendChild(heart);
+      setTimeout(() => heart.remove(), 3500);
+    }
+
+    function confettiHearts(){
+      const n = 18;
+      const rect = document.body.getBoundingClientRect();
+      for(let i=0;i<n;i++){ 
+        const h = document.createElement('div');
+        h.className='heart';
+        h.textContent = ['💖','💘','💝','💗'][Math.floor(Math.random()*4)];
+        h.style.left = (Math.random() * (rect.width - 20)) + "px";
+        h.style.top = (rect.height - 40) + "px";
+        h.style.fontSize = (16 + Math.random()*26) + "px";
+        document.body.appendChild(h);
+        setTimeout(()=>h.remove(), 3500);
+      }
+    }
+  </script>
+</body>
+</html>
